Fixed Layout issues

--- a/compo-frontend/styles/globals.css
+++ b/compo-frontend/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   @apply bg-colorWhite text-colorStone;
 }
 
@@ -17,7 +17,15 @@ h6 {
 }
 
 .container {
-  @apply w-[90%] max-w-[1380px] mx-auto;
+  @apply w-[100%] max-w-[px] mx-auto;
+}
+
+.container-fluid {
+  margin: 0px;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  max-height: 100%;
 }
 
 .about-image {
